force-app/main/default/objects/Framework_Supplier__c/Framework_Supplier__c.object-meta.xml
<CustomObject>
    <description>US0612 - Junction object between Account and Framework</description>
    <label>Framework Supplier</label>
    <nameField>
        <displayFormat>FS{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Framework Suppliers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>