force-app/main/default/objects/Framework_Supplier__c/fields/Framework__c.field-meta.xml
<CustomField>
    <fullName>Framework__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US0612 - Initial Build</description>
    <label>Framework</label>
    <referenceTo>Master_Framework__c</referenceTo>
    <relationshipLabel>Framework Suppliers</relationshipLabel>
    <relationshipName>Framework_Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>