force-app/main/default/objects/Framework_Supplier__c/fields/RM_Number__c.field-meta.xml
<CustomField>
    <fullName>RM_Number__c</fullName>
    <formula>Framework__r.RM_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RM Number</label>
    <type>Text</type>
</CustomField>