force-app/main/default/objects/Framework_Supplier__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Select &apos;Live&apos; if the supplier has an active place on the agreement.

Select &apos;Suspended&apos; if the supplier has been temporarily removed from the agreement.

Select &apos;Expired&apos; if the supplier&apos;s participation in the agreement has permanently ended.

NOTE - Suspended and Expired suppliers will not appear on the website under this agreement.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>