force-app/main/default/objects/Framework_Supplier__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US0612 - Initial Build</description>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Framework Suppliers</relationshipLabel>
    <relationshipName>Framework_Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>