force-app/main/default/objects/Framework_Supplier__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Supplier__c</columns>
    <columns>Trading_Name__c</columns>
    <columns>Framework__c</columns>
    <columns>RM_Number__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>